webots_ros2_brick/log/build_2024-05-09_18-57-04/webots_ros2_brick/stderr.log
  File "/home/ferre/brick/BRICK-WEBots/webots_ros2_brick/install/webots_ros2_brick/lib/python3.10/site-packages/webots_ros2_brick/navigation.py", line 112
    self.get_logger().info(str(orientation)
                          ^
SyntaxError: '(' was never closed

